# aribcap-db

./: .codespellrc  .editorconfig-checker.json  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .rumdl.toml  .trufflehogignore  Cargo.toml  README.md  compose.mega-linter.yml  config.example.toml  flake.nix  trivy.yaml
.sqlx/: query-0734c06541851e68bf66b1434e4ac10173efce66790244ea6cd4cb65d5794f7a.json  query-31f7fda2fffd146081901de7d72e1b1114106f9e9179aa375ed3dcbca872342a.json  query-35cc6ca0e9dc24a44e5d58c49bd72f460a1b5e78a8f12720ee6d0de08e6bc7aa.json  query-3b5f1fc64ab44b4f35422e94c19e0d9a780becf561fe49f468fdcc35ac29852d.json  query-4a15792847fc8c805caf75cd8fb28379a7d7d5f03b5640c53522642fd60f4e6f.json  query-4e03fb9d19f8061f011c6f16d98f7376720591d990c6eb54ff01a4f21a783dea.json  query-814ca1ae4a59a58fa41714a3e439bcc9178c2654c29cc5508a3effeae12fb246.json  query-8d88f7c7d7ab59f564a5c91ba93ffa1bd8eba2040327faab8bf86a706f2c7ab8.json  query-93293f75f5eb1f278abcaf4bafe09f45fa640d3a145640de16cc8440532c65cd.json  query-98a602cc47eae6ede03b7d1007f180ddd9badbc0dae033f844f7fe837483b185.json  query-a0beb1fd2308ab5378a289e305034d98b02aa1c345703de9a59b6c8faec8ab0e.json  query-b85bd6f32e8a46837c61cca11b3a6eadc8b8476502c1e9916e1d07abadf997f7.json  query-be96ecb566689f4772b6385f074ced95a29a3fc3e2ed11cb77f3497d3efd547a.json
docs/: http-api.md  linting.md  mcp.md
migrations/: 20260713000000_search_schema.sql
src/: archive.rs  cli.rs  config.rs  docs_gen.rs  http_api_docs.rs  lib.rs  live.rs  logging.rs  main.rs  mcp.rs  mcp_docs.rs  query_service.rs  render.rs  search_db.rs  serve.rs  server.rs  stream.rs  tail.rs  test_support.rs
src/search_db/: db.rs  indexer.rs  ingest.rs  lock.rs  query.rs  record.rs  test_support.rs  text.rs
