[package]
name = "aribcap-db"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"
publish = false
default-run = "aribcap-tail"

[[bin]]
name = "aribcap-tail"
path = "src/bin/aribcap-tail.rs"

[[bin]]
name = "aribcap-db"
path = "src/bin/aribcap-db.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
anstream = "1.0"
anstyle = "1.0"
axum = "0.8"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
colored_json = "5.0"
futures-util = "0.3"
humantime = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rmcp = { version = "2.2.0", features = [
  "macros",
  "schemars",
  "server",
  "transport-streamable-http-server",
] }
sanitize-filename = "0.6"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
terminal_size = "0.4"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
toml = "1.0"
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1.25"
unicode-width = "0.2"
upon = { version = "0.10", default-features = false, features = ["serde"] }
urlencoding = "2.1"

[dev-dependencies]
similar = "3.1"
tower = { version = "0.5", features = ["util"] }
